"""Initial migration

Revision ID: 2cf62a75a205
Revises: 
Create Date: 2025-12-28 21:07:08.863760

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = '2cf62a75a205'
down_revision: Union[str, Sequence[str], None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('menu',
    sa.Column('name', sa.String(), nullable=False),
    sa.Column('type_menu', sa.String(), nullable=False),
    sa.Column('file_route', sa.String(), nullable=False),
    sa.Column('active', sa.Boolean(), nullable=False),
    sa.Column('uid', sa.String(), nullable=False),
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('created_at', sa.TIMESTAMP(), nullable=False),
    sa.Column('updated_at', sa.TIMESTAMP(), nullable=False),
    sa.Column('deleted_at', sa.DateTime(), nullable=True),
    sa.Column('is_deleted', sa.Boolean(), nullable=False),
    sa.PrimaryKeyConstraint('uid', 'id')
    )
    op.create_index(op.f('ix_menu_id'), 'menu', ['id'], unique=True)
    op.create_index(op.f('ix_menu_uid'), 'menu', ['uid'], unique=True)
    op.create_table('menu_role',
    sa.Column('name', sa.String(length=50), nullable=False),
    sa.Column('description', sa.String(), nullable=False),
    sa.Column('level', sa.Integer(), nullable=False),
    sa.Column('menus', sa.ARRAY(sa.String(), as_tuple=True), nullable=False),
    sa.Column('disabled', sa.Boolean(), nullable=False),
    sa.Column('uid', sa.String(), nullable=False),
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('created_at', sa.TIMESTAMP(), nullable=False),
    sa.Column('updated_at', sa.TIMESTAMP(), nullable=False),
    sa.Column('deleted_at', sa.DateTime(), nullable=True),
    sa.Column('is_deleted', sa.Boolean(), nullable=False),
    sa.PrimaryKeyConstraint('uid', 'id'),
    sa.UniqueConstraint('level')
    )
    op.create_index(op.f('ix_menu_role_id'), 'menu_role', ['id'], unique=True)
    op.create_index(op.f('ix_menu_role_uid'), 'menu_role', ['uid'], unique=True)
    op.create_table('permissions',
    sa.Column('name', sa.String(length=50), nullable=False),
    sa.Column('action', sa.String(length=50), nullable=False),
    sa.Column('description', sa.String(), nullable=False),
    sa.Column('type', sa.String(length=50), nullable=False),
    sa.Column('uid', sa.String(), nullable=False),
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('created_at', sa.TIMESTAMP(), nullable=False),
    sa.Column('updated_at', sa.TIMESTAMP(), nullable=False),
    sa.Column('deleted_at', sa.DateTime(), nullable=True),
    sa.Column('is_deleted', sa.Boolean(), nullable=False),
    sa.PrimaryKeyConstraint('uid', 'id'),
    sa.UniqueConstraint('name')
    )
    op.create_index(op.f('ix_permissions_id'), 'permissions', ['id'], unique=True)
    op.create_index(op.f('ix_permissions_uid'), 'permissions', ['uid'], unique=True)
    op.create_table('roles',
    sa.Column('name', sa.String(length=50), nullable=False),
    sa.Column('description', sa.String(), nullable=False),
    sa.Column('level', sa.Integer(), nullable=False),
    sa.Column('permissions', sa.ARRAY(sa.String(), as_tuple=True), nullable=False),
    sa.Column('disabled', sa.Boolean(), nullable=False),
    sa.Column('uid', sa.String(), nullable=False),
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('created_at', sa.TIMESTAMP(), nullable=False),
    sa.Column('updated_at', sa.TIMESTAMP(), nullable=False),
    sa.Column('deleted_at', sa.DateTime(), nullable=True),
    sa.Column('is_deleted', sa.Boolean(), nullable=False),
    sa.PrimaryKeyConstraint('uid', 'id'),
    sa.UniqueConstraint('level')
    )
    op.create_index(op.f('ix_roles_id'), 'roles', ['id'], unique=True)
    op.create_index(op.f('ix_roles_uid'), 'roles', ['uid'], unique=True)
    op.create_table('api_tokens',
    sa.Column('name', sa.String(length=50), nullable=False),
    sa.Column('description', sa.String(), nullable=False),
    sa.Column('role_ref', sa.String(), nullable=False),
    sa.Column('expiration', sa.Date(), nullable=False),
    sa.Column('uid', sa.String(), nullable=False),
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('created_at', sa.TIMESTAMP(), nullable=False),
    sa.Column('updated_at', sa.TIMESTAMP(), nullable=False),
    sa.Column('deleted_at', sa.DateTime(), nullable=True),
    sa.Column('is_deleted', sa.Boolean(), nullable=False),
    sa.ForeignKeyConstraint(['role_ref'], ['roles.uid'], ),
    sa.PrimaryKeyConstraint('uid', 'id')
    )
    op.create_index(op.f('ix_api_tokens_id'), 'api_tokens', ['id'], unique=True)
    op.create_index(op.f('ix_api_tokens_uid'), 'api_tokens', ['uid'], unique=True)
    op.create_table('users',
    sa.Column('username', sa.String(), nullable=False),
    sa.Column('role_ref', sa.String(), nullable=False),
    sa.Column('password', sa.String(), nullable=False),
    sa.Column('email', sa.String(), nullable=False),
    sa.Column('full_name', sa.String(), nullable=False),
    sa.Column('otp_secret', sa.String(), nullable=True),
    sa.Column('otp_enabled', sa.Boolean(), nullable=False),
    sa.Column('uid', sa.String(), nullable=False),
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('created_at', sa.TIMESTAMP(), nullable=False),
    sa.Column('updated_at', sa.TIMESTAMP(), nullable=False),
    sa.Column('deleted_at', sa.DateTime(), nullable=True),
    sa.Column('is_deleted', sa.Boolean(), nullable=False),
    sa.ForeignKeyConstraint(['role_ref'], ['roles.uid'], ),
    sa.PrimaryKeyConstraint('uid', 'id'),
    sa.UniqueConstraint('email'),
    sa.UniqueConstraint('username')
    )
    op.create_index('ix_user_tsv', 'users', [sa.literal_column("to_tsvector('english', username || ' ' || email || ' ' || full_name)")], unique=False, postgresql_using='gin')
    op.create_index(op.f('ix_users_id'), 'users', ['id'], unique=True)
    op.create_index(op.f('ix_users_uid'), 'users', ['uid'], unique=True)
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_users_uid'), table_name='users')
    op.drop_index(op.f('ix_users_id'), table_name='users')
    op.drop_index('ix_user_tsv', table_name='users', postgresql_using='gin')
    op.drop_table('users')
    op.drop_index(op.f('ix_api_tokens_uid'), table_name='api_tokens')
    op.drop_index(op.f('ix_api_tokens_id'), table_name='api_tokens')
    op.drop_table('api_tokens')
    op.drop_index(op.f('ix_roles_uid'), table_name='roles')
    op.drop_index(op.f('ix_roles_id'), table_name='roles')
    op.drop_table('roles')
    op.drop_index(op.f('ix_permissions_uid'), table_name='permissions')
    op.drop_index(op.f('ix_permissions_id'), table_name='permissions')
    op.drop_table('permissions')
    op.drop_index(op.f('ix_menu_role_uid'), table_name='menu_role')
    op.drop_index(op.f('ix_menu_role_id'), table_name='menu_role')
    op.drop_table('menu_role')
    op.drop_index(op.f('ix_menu_uid'), table_name='menu')
    op.drop_index(op.f('ix_menu_id'), table_name='menu')
    op.drop_table('menu')
    # ### end Alembic commands ###
