
Table users {
  uid varchar [pk, unique, note: "UUID"]
  id int [pk, increment]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
  is_deleted bool

  username varchar [unique, not null]
  role_ref varchar [ref: > roles.uid, not null]
  password varchar [not null]
  email varchar [unique]
  full_name varchar [not null]
  otp_secret varchar
  otp_enabled bool
}

Table roles {
  uid varchar [pk, unique, note: "UUID"]
  id int [pk, increment]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
  is_deleted bool

  name varchar [not null]
  description varchar [not null]
  level int [unique, not null]
  permissions "varchar[]" [not null]
  disabled bool [default: false]
}

Table permissions {
  uid varchar [pk, unique, note: "UUID"]
  id int [pk, increment]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
  is_deleted bool

  name varchar [unique, not null]
  action varchar [not null]
  description varchar [not null]
  type varchar [not null]
}

Table menu {
  uid varchar [pk, unique, note: "UUID"]
  id int [pk, increment]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
  is_deleted bool

  name varchar [not null]
  type_menu varchar [not null]
  file_route varchar [not null]
  active bool [not null]
}

Table menu_role {
  uid varchar [pk, unique, note: "UUID"]
  id int [pk, increment]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
  is_deleted bool

  name varchar [not null]
  description varchar [not null]
  level int [unique, not null]
  menus "varchar[]" [not null]
  disabled bool [default: false]
}

Table api_tokens {
  uid varchar [pk, unique, note: "UUID"]
  id int [pk, increment]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
  is_deleted bool

  name varchar [not null]
  description varchar [not null]
  role_ref varchar [ref: > roles.uid, not null]
  expiration date
}